package com.escuelait.models;

public record Player(int id, String name) {
}
