package com.escuelait.models;

public record Referee(String name, String password) {
}
