package com.escuelait.models;

public enum StateValue {

  INITIAL,
  STARTED,
  LOGGED,
  MATCH_STARTED,
  EXIT,

}
